changed header layout

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,4 +44,6 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     implementation 'com.google.code.gson:gson:2.8.6'
 
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
+
 }
