Format code: CamelCase variable names
Signed-off-by: Shashank Verma <shashank.verma2002@gmail.com>

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,7 +30,7 @@
                 android:value="" />
         </activity>
         <activity
-            android:name=".view.activities.SignupActivity"
+            android:name=".view.activities.SignUpActivity"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
