--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,5 +61,8 @@ dependencies {
     // Also add the dependency for the Google Play services library and specify its version
     implementation 'com.google.android.gms:play-services-auth:20.4.0'
 
+    implementation 'com.google.firebase:firebase-storage-ktx'
+
+
 
 }
