--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,6 +63,8 @@ dependencies {
 
     implementation 'com.google.firebase:firebase-storage-ktx'
 
+    implementation 'com.squareup.picasso:picasso:2.8'
+
 
 
 }
