--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,13 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.NotificationApp"
         tools:targetApi="31">
-
+        <activity
+            android:name=".view.activities.PostActivity"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
         <activity
             android:name=".view.activities.CreatePostActivity"
             android:exported="false">
