--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,6 +65,16 @@ dependencies {
 
     implementation 'com.squareup.picasso:picasso:2.8'
 
-
+    implementation "io.noties.markwon:core:4.6.2"
+    implementation "io.noties.markwon:editor:4.6.2"
+//    implementation "io.noties.markwon:html:4.6.2"
+//    implementation "io.noties.markwon:ext-tasklist:4.6.2"
+    implementation "io.noties.markwon:ext-tables:4.6.2"
+    implementation "io.noties.markwon:ext-strikethrough:4.6.2"
+    implementation "io.noties.markwon:inline-parser:4.6.2"
+//    implementation "io.noties.markwon:image:4.6.2"
+//    implementation "io.noties.markwon:image-picasso:4.6.2"
+    implementation "io.noties.markwon:linkify:4.6.2"
+//    implementation "io.noties.markwon:syntax-highlighting:4.6.2"
 
 }
