--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,16 +1,20 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'dagger.hilt.android.plugin'
+    id 'kotlin-kapt'
+    id 'com.google.gms.google-services'
+    id 'com.google.firebase.crashlytics'
 }
 
 android {
     namespace 'com.mnnit.moticlubs'
-    compileSdk 32
+    compileSdk 33
 
     defaultConfig {
         applicationId "com.mnnit.moticlubs"
         minSdk 26
-        targetSdk 32
+        targetSdk 33
         versionCode 1
         versionName "1.0"
 
@@ -32,6 +36,11 @@ android {
     }
     kotlinOptions {
         jvmTarget = '1.8'
+        freeCompilerArgs += "-opt-in=com.google.accompanist.pager.ExperimentalPagerApi"
+        freeCompilerArgs += "-opt-in=androidx.compose.animation.ExperimentalAnimationApi"
+        freeCompilerArgs += "-opt-in=androidx.compose.material3.ExperimentalMaterial3Api"
+        freeCompilerArgs += "-opt-in=androidx.compose.ui.ExperimentalComposeUiApi"
+        freeCompilerArgs += "-opt-in=androidx.compose.foundation.ExperimentalFoundationApi"
     }
     buildFeatures {
         compose true
@@ -47,13 +56,37 @@ android {
 }
 
 dependencies {
+    implementation 'com.google.accompanist:accompanist-systemuicontroller:0.24.9-beta'
+    implementation 'com.google.accompanist:accompanist-navigation-animation:0.24.9-beta'
+    implementation 'com.google.accompanist:accompanist-pager:0.24.9-beta'
 
     implementation 'androidx.core:core-ktx:1.7.0'
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
-    implementation 'androidx.activity:activity-compose:1.3.1'
-    implementation "androidx.compose.ui:ui:$compose_version"
-    implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
-    implementation 'androidx.compose.material3:material3:1.0.0-alpha02'
+    implementation 'androidx.appcompat:appcompat:1.5.1'
+    implementation 'androidx.core:core-splashscreen:1.0.0'
+
+    implementation 'androidx.compose.compiler:compiler:1.1.1'
+    implementation 'androidx.compose.ui:ui:1.1.1'
+    implementation 'androidx.compose.ui:ui-tooling-preview:1.1.1'
+    implementation 'androidx.compose.runtime:runtime:1.1.1'
+    implementation 'androidx.navigation:navigation-compose:2.5.0-rc01'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.5.0-rc01'
+    implementation 'androidx.activity:activity-compose:1.6.1'
+    implementation 'androidx.hilt:hilt-navigation-compose:1.0.0-beta01'
+
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.4'
+    kapt 'com.google.dagger:hilt-android-compiler:2.42'
+    implementation 'com.google.dagger:hilt-android:2.42'
+
+    implementation 'androidx.compose.material:material:1.1.1'
+    implementation 'androidx.compose.material3:material3:1.1.0-alpha04'
+    implementation 'androidx.compose.material:material-icons-core:1.3.1'
+    implementation 'androidx.compose.material:material-icons-extended:1.3.1'
+    implementation 'com.google.code.gson:gson:2.9.1'
+
+    implementation platform('com.google.firebase:firebase-bom:31.1.1')
+    implementation 'com.google.firebase:firebase-analytics-ktx'
+    implementation 'com.google.firebase:firebase-crashlytics-ktx'
+
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
