--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,11 @@ buildscript {
     ext {
         compose_version = '1.1.1'
     }
+    dependencies {
+        classpath 'com.google.dagger:hilt-android-gradle-plugin:2.42'
+        classpath 'com.google.firebase:firebase-crashlytics-gradle:2.9.2'
+        classpath 'com.google.gms:google-services:4.3.14'
+    }
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
     id 'com.android.application' version '7.3.1' apply false
