--- a/app/build.gradle
+++ b/app/build.gradle
@@ -87,6 +87,7 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     implementation 'com.squareup.picasso:picasso:2.8'
     implementation 'com.google.android.gms:play-services-auth:20.4.0'
+    implementation 'io.coil-kt:coil-compose:2.2.2'
 
     implementation "io.noties.markwon:core:4.6.2"
     implementation "io.noties.markwon:editor:4.6.2"
