--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,28 +56,28 @@ android {
 }
 
 dependencies {
-    implementation 'com.google.accompanist:accompanist-systemuicontroller:0.24.9-beta'
+    implementation 'com.google.accompanist:accompanist-systemuicontroller:0.28.0'
     implementation 'com.google.accompanist:accompanist-navigation-animation:0.24.9-beta'
     implementation 'com.google.accompanist:accompanist-pager:0.24.9-beta'
 
-    implementation 'androidx.core:core-ktx:1.7.0'
-    implementation 'androidx.appcompat:appcompat:1.5.1'
+    implementation 'androidx.core:core-ktx:1.9.0'
+    implementation 'androidx.appcompat:appcompat:1.6.0'
     implementation 'androidx.core:core-splashscreen:1.0.0'
 
-    implementation 'androidx.compose.compiler:compiler:1.1.1'
-    implementation 'androidx.compose.ui:ui:1.1.1'
-    implementation 'androidx.compose.ui:ui-tooling-preview:1.1.1'
-    implementation 'androidx.compose.runtime:runtime:1.1.1'
-    implementation 'androidx.navigation:navigation-compose:2.5.0-rc01'
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.5.0-rc01'
+    implementation 'androidx.compose.compiler:compiler:1.3.2'
+    implementation 'androidx.compose.ui:ui:1.3.3'
+    implementation 'androidx.compose.ui:ui-tooling-preview:1.3.3'
+    implementation 'androidx.compose.runtime:runtime:1.3.3'
+    implementation 'androidx.navigation:navigation-compose:2.6.0-alpha04'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.6.0-alpha04'
     implementation 'androidx.activity:activity-compose:1.6.1'
-    implementation 'androidx.hilt:hilt-navigation-compose:1.0.0-beta01'
+    implementation 'androidx.hilt:hilt-navigation-compose:1.1.0-alpha01'
 
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.4'
-    kapt 'com.google.dagger:hilt-android-compiler:2.42'
-    implementation 'com.google.dagger:hilt-android:2.42'
+    kapt 'com.google.dagger:hilt-android-compiler:2.44.2'
+    implementation 'com.google.dagger:hilt-android:2.44.2'
 
-    implementation 'androidx.compose.material:material:1.1.1'
+    implementation 'androidx.compose.material:material:1.3.1'
     implementation 'androidx.compose.material3:material3:1.1.0-alpha04'
     implementation 'androidx.compose.material:material-icons-core:1.3.1'
     implementation 'androidx.compose.material:material-icons-extended:1.3.1'
@@ -108,7 +108,7 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
-    androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
-    debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
-    debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_version"
+    androidTestImplementation "androidx.compose.ui:ui-test-junit4:1.3.3"
+    debugImplementation "androidx.compose.ui:ui-tooling:1.3.3"
+    debugImplementation "androidx.compose.ui:ui-test-manifest:1.3.3"
 }
