--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,14 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MotiClubs"
         tools:targetApi="31">
+        <activity android:name=".ui.activity.ClubActivity"
+            android:exported="false"
+            android:windowSoftInputMode="adjustResize">
+
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
         <activity
             android:name=".ui.activity.MainActivity"
             android:exported="true"
