--- a/app/build.gradle
+++ b/app/build.gradle
@@ -69,7 +69,7 @@ dependencies {
     implementation 'androidx.compose.ui:ui:1.3.3'
     implementation 'androidx.compose.ui:ui-tooling-preview:1.3.3'
     implementation 'androidx.compose.runtime:runtime:1.3.3'
-    implementation 'androidx.navigation:navigation-compose:2.6.0-alpha04'
+    implementation 'androidx.navigation:navigation-compose:2.5.3'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.6.0-alpha04'
     implementation 'androidx.activity:activity-compose:1.6.1'
     implementation 'androidx.hilt:hilt-navigation-compose:1.1.0-alpha01'
@@ -87,7 +87,7 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     implementation 'com.squareup.picasso:picasso:2.8'
-    implementation 'com.google.android.gms:play-services-auth:20.4.0'
+    implementation 'com.google.android.gms:play-services-auth:20.4.1'
     implementation 'io.coil-kt:coil-compose:2.2.2'
 
     implementation "io.noties.markwon:core:4.6.2"
