--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,8 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MotiClubs"
         tools:targetApi="31">
-        <activity android:name=".ui.activity.ClubActivity"
+        <activity
+            android:name=".ui.activity.ClubActivity"
             android:exported="false"
             android:windowSoftInputMode="adjustResize">
 
@@ -22,9 +23,8 @@
                 android:value="" />
         </activity>
         <activity
-            android:name=".ui.activity.MainActivity"
+            android:name=".ui.activity.EntryActivity"
             android:exported="true"
-            android:label="@string/app_name"
             android:theme="@style/Theme.MotiClubs"
             android:windowSoftInputMode="adjustResize">
             <intent-filter>
