MainActivity: Swtich to one activity - rest fragments
Signed-off-by: Shashank Verma <shashank.verma2002@gmail.com>

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,7 +23,7 @@
                 android:value="" />
         </activity>
         <activity
-            android:name=".ui.activity.EntryActivity"
+            android:name=".ui.activity.MainActivity"
             android:exported="true"
             android:theme="@style/Theme.MotiClubs"
             android:windowSoftInputMode="adjustResize">
