--- a/app/build.gradle
+++ b/app/build.gradle
@@ -115,4 +115,5 @@ dependencies {
     androidTestImplementation "androidx.compose.ui:ui-test-junit4:1.3.3"
     debugImplementation "androidx.compose.ui:ui-tooling:1.3.3"
     debugImplementation "androidx.compose.ui:ui-test-manifest:1.3.3"
+//    implementation("com.github.CanHub:Android-Image-Cropper:4.0.0")
 }
