--- a/app/build.gradle
+++ b/app/build.gradle
@@ -89,6 +89,7 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     implementation 'com.squareup.picasso:picasso:2.8'
+    implementation 'com.squareup.picasso3:picasso-compose:3.0.0-alpha03'
     implementation 'com.google.android.gms:play-services-auth:20.4.1'
     implementation 'io.coil-kt:coil-compose:2.2.2'
 
