--- a/app/build.gradle
+++ b/app/build.gradle
@@ -92,6 +92,7 @@ dependencies {
     implementation 'com.squareup.picasso3:picasso-compose:3.0.0-alpha03'
     implementation 'com.google.android.gms:play-services-auth:20.4.1'
     implementation 'io.coil-kt:coil-compose:2.2.2'
+    implementation "com.github.skydoves:colorpicker-compose:1.0.1"
 
     implementation "io.noties.markwon:core:4.6.2"
     implementation 'io.noties.markwon:image:4.6.2'
