--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -28,5 +28,7 @@ jobs:
       with:
         java-version: '11'
         distribution: 'temurin'
+    - name: Make gradlew executable
+      run: chmod +x ./gradlew
     - name: Build with Gradle
       run: ./gradlew :app:assembleDebug
