gradle.yml: Remove json after use and convert to release build test
Signed-off-by: Shashank Verma <shashank.verma2002@gmail.com>

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -35,4 +35,6 @@ jobs:
     - name: Make gradlew executable
       run: chmod +x ./gradlew
     - name: Build with Gradle
-      run: ./gradlew :app:assembleDebug
+      run: ./gradlew :app:assembleRelease
+    - name: Remove secret
+      run: rm -rf app/google-services.json
