.github: Switching actions to main branch
Signed-off-by: Shashank Verma <shashank.verma2002@gmail.com>

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -9,9 +9,9 @@ name: Android Gradle Build
 
 on:
   push:
-    branches: [ "dev-stage" ]
+    branches: [ "main" ]
   pull_request:
-    branches: [ "dev-stage" ]
+    branches: [ "main" ]
 
 permissions:
   contents: read
