.github: Add lint check for gradle build workflow
Signed-off-by: Shashank Verma <shashank.verma2002@gmail.com>

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -35,6 +35,6 @@ jobs:
     - name: Make gradlew executable
       run: chmod +x ./gradlew
     - name: Build with Gradle
-      run: ./gradlew :app:bundleRelease --parallel
+      run: ./gradlew :app:lintRelease :app:bundleRelease --parallel
     - name: Remove secret
       run: rm -rf app/google-services.json
