.github: gradle.yml: Use gradle cache

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -28,6 +28,7 @@ jobs:
       with:
         java-version: '17'
         distribution: 'temurin'
+        cache: gradle
     - name: Get secret
       env:
         JSON: ${{ secrets.JSON_PASS }}
