build.gradle: Enable ktlint check
Signed-off-by: Shashank Verma <shashank.verma2002@gmail.com>

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,8 +11,13 @@ plugins {
 }
 
 ktlint {
-    android.set(true)
-    outputColorName.set("RED")
+    android = true
+    outputColorName = "RED"
+    reporters {
+        reporter "plain"
+        reporter "checkstyle"
+        reporter "sarif"
+    }
 }
 
 android {
