--- a/build.gradle
+++ b/build.gradle
@@ -10,5 +10,5 @@ plugins {
     id 'com.android.library' version '8.1.1' apply false
     id 'org.jetbrains.kotlin.android' version '1.9.10' apply false
     id 'com.google.devtools.ksp' version '1.9.10-1.0.13' apply false
-    id 'org.jlleitschuh.gradle.ktlint' version '11.5.1'
+    id "org.jmailen.kotlinter" version "3.16.0" apply false
 }
