build.gradle: Add linting dependency to tasks
Signed-off-by: Shashank Verma <shashank.verma2002@gmail.com>

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,6 +63,12 @@ android {
     }
 }
 
+afterEvaluate {
+    lintVitalRelease.dependsOn('lintKotlin')
+    assembleDebug.dependsOn('formatKotlin').dependsOn('lintVitalRelease')
+    bundleRelease.dependsOn('lintVitalRelease')
+}
+
 dependencies {
     implementation 'com.google.accompanist:accompanist-systemuicontroller:0.28.0'
 
