.editorconfig: Add few spacing rules
Signed-off-by: Shashank Verma <shashank.verma2002@gmail.com>

--- a/app/.editorconfig
+++ b/app/.editorconfig
@@ -20,3 +20,10 @@ ij_kotlin_code_style_defaults = KOTLIN_OFFICIAL
 ij_kotlin_import_nested_classes = false
 ij_kotlin_imports_layout = *, java.**, javax.**, kotlin.**, ^
 ij_kotlin_continuation_indent_for_expression_bodies = false
+ij_kotlin_spaces_around_assignment_operators = true
+ij_kotlin_spaces_around_equality_operators = true
+ij_kotlin_spaces_around_relational_operators = true
+ij_kotlin_spaces_around_multiplicative_operators = true
+ij_kotlin_spaces_around_when_arrow = true
+ij_kotlin_spaces_around_range = true
+ij_kotlin_space_after_comma = true
