build.gradle: Do not depend release lint to assemble debug
Signed-off-by: Shashank Verma <shashank.verma2002@gmail.com>

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,7 +65,8 @@ android {
 
 afterEvaluate {
     lintVitalRelease.dependsOn('lintKotlin')
-    assembleDebug.dependsOn('formatKotlin').dependsOn('lintVitalRelease')
+    lint.dependsOn('lintKotlin')
+    assembleDebug.dependsOn('formatKotlin').dependsOn('lint')
     bundleRelease.dependsOn('lintVitalRelease')
 }
 
